# proto

./: .gitignore  README  buf.gen.yaml  buf.yaml  go.mod  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: publish-go.yml  publish-npm.yml  publish-python.yml  publish.yml
github/workflows/: publish.yml
proto/: account.proto  auth.proto  booking.proto  category.proto  hall.proto  media.proto  movie.proto  payment.proto  refund.proto  screening.proto  seat.proto  theater.proto  users.proto
scripts/: generate-go.sh  generate-ts.sh  generate.ts  generate_all.sh  generate_go.sh  generate_py.sh  generate_ts.sh  verify.sh
src/: booking.proto  hall.proto  index.ts  movie.proto  payment.proto  screening.proto  seat.proto  theater.proto  users.proto
src/auth/v1/: auth.proto
src/events/: index.ts
src/events/account/: email-changed.event.ts  index.ts  phone-changed.event.ts
src/events/auth/: index.ts  otp-requested.event.ts  user-registered.event.ts
src/events/booking/: booking-confirmed.event.ts  booking-refunded.event.ts  index.ts
src/proto/: auth.proto  booking.proto  movie.proto  paths.ts  payment.proto  refund.proto  screening.proto  seat.proto
